--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,34 @@
 
+body {
+	font-family: Roboto;
+}
+
+nav {
+	padding-left: 60px;
+	padding-right: 60px;
+	/*height: 50px;*/
+	background-color: gray
+	position: absolute;
+	display:flex;
+	justify-content: flex-start;
+	align-items: center;
+
+}
+
+.homeicon {
+	/*left: 10px;*/
+	/*height: 50px;*/
+	/*width: 50px;*/
+	position: absolute;
+	/*padding-right: 10px;*/
+}
+
+ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+li {
+
+}
